[gd_scene format=3 uid="uid://lnwymddasp3o"]

[ext_resource type="Script" uid="uid://rwtibr7yaofx" path="res://Scripts/player.gd" id="1_v0iea"]
[ext_resource type="Texture2D" uid="uid://bx2v1a3b0ulir" path="res://Resources/Art/Player/Swordsman_lvl1_Walk_with_shadow.png" id="2_cvnsp"]
[ext_resource type="Texture2D" uid="uid://bic00xnd4p8hr" path="res://Resources/Art/Mask/mask_merged.png" id="3_6t5aa"]

[sub_resource type="CircleShape2D" id="CircleShape2D_f60y1"]
radius = 4.0

[sub_resource type="Animation" id="Animation_vgqql"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}

[sub_resource type="Animation" id="Animation_6t5aa"]
resource_name = "walk_down"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_x3wgy"]
resource_name = "walk_left"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_3smsa"]
resource_name = "walk_right"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [12, 13, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_fkybt"]
resource_name = "walk_up"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [18, 19, 20, 21, 22, 23]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8erm5"]
_data = {
&"RESET": SubResource("Animation_vgqql"),
&"walk_down": SubResource("Animation_6t5aa"),
&"walk_left": SubResource("Animation_x3wgy"),
&"walk_right": SubResource("Animation_3smsa"),
&"walk_up": SubResource("Animation_fkybt")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_cvnsp"]
radius = 8.0

[node name="Player" type="CharacterBody2D" unique_id=247806807 groups=["player"]]
y_sort_enabled = true
script = ExtResource("1_v0iea")

[node name="BodySprite" type="Sprite2D" parent="." unique_id=79946255]
texture = ExtResource("2_cvnsp")
offset = Vector2(0, -10)
hframes = 6
vframes = 4

[node name="MaskSprite" type="Sprite2D" parent="BodySprite" unique_id=741142177]
position = Vector2(-1, -10.999999)
scale = Vector2(0.025, 0.025)
texture = ExtResource("3_6t5aa")
hframes = 4
vframes = 11

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=488970445]
shape = SubResource("CircleShape2D_f60y1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=545719763]
libraries/ = SubResource("AnimationLibrary_8erm5")

[node name="Camera2D" type="Camera2D" parent="." unique_id=1277440350]
zoom = Vector2(4, 4)
process_callback = 0
limit_enabled = false
position_smoothing_speed = 1.0

[node name="InteractionZone" type="Area2D" parent="." unique_id=1332326183]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionZone" unique_id=65292793]
shape = SubResource("CircleShape2D_cvnsp")

[connection signal="body_entered" from="InteractionZone" to="." method="_on_interaction_zone_body_entered"]
[connection signal="body_exited" from="InteractionZone" to="." method="_on_interaction_zone_body_exited"]
